update bootstrap.sh